--- a/fatogo_RDB/templates/2.hotel_page/hotel_1.html
+++ b/fatogo_RDB/templates/2.hotel_page/hotel_1.html
@@ -8,20 +8,22 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 
+  {% load static %}
+
 
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
-  <link rel="stylesheet" href="css\swiper.min.css">
+  <link rel="stylesheet" href="{% static 'hotel_page/css/swiper.min.css' %}">
 
 
 
 
   <title>Fatogo</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/hotel.css">
+  <link rel="stylesheet" href="{% static 'hotel_page/css/normalize.css'%}">
+  <link rel="stylesheet" href="{% static 'hotel_page/css/hotel.css'%}">
 </head>
 
 <body>
@@ -55,25 +57,25 @@
     <a href="hotel_slideshow.html">
       <div class="swiper-container" id="swiper-container1">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
+          <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
           </div>
-          <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
+          <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
           </div>
-          <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
+          <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
           </div>
-          <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
+          <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
           </div>
-          <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
+          <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
           </div>
-          <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
+          <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
           </div>
-          <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
+          <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
           </div>
-          <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
+          <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
           </div>
-          <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
+          <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
           </div>
-          <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
+          <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="375px" width="100%"><!-- 이미지 파일 -->
           </div>
         </div>
         <!-- Add Pagination -->
@@ -170,11 +172,11 @@
             <div class="hotel_slideshow_1">
               <div class="swiper-container" id="swiper-container2">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="307.5px" width="100%"><!-- 이미지 파일 -->
+                  <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="307.5px" width="100%"><!-- 이미지 파일 -->
                   </div>
-                  <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="307.5px" width="100%"><!-- 이미지 파일 -->
+                  <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="307.5px" width="100%"><!-- 이미지 파일 -->
                   </div>
-                  <div class="swiper-slide"><img src="C:\Users\nucle\Desktop\Dev\img\hotel1\Hotel_intro1.png" alt="김파투고의 김여행 김모텔 프론트사진" height="307.5px" width="100%"><!-- 이미지 파일 -->
+                  <div class="swiper-slide"><img src="{%static 'img/hotel1/Hotel_intro1.png'%}" alt="김파투고의 김여행 김모텔 프론트사진" height="307.5px" width="100%"><!-- 이미지 파일 -->
                   </div>
                 </div>
               </div>
@@ -279,7 +281,7 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAX3VGTK-qk4Y1vqDhfw8s1cO7BiM_ZOaQ
 &callback=initMap"></script>
   <!-- 스와이퍼 슬라이드쇼 확장 프로그램 CDN -->
-  <script src="js\swiper.min.js"></script>
+  <script src="{% static 'hotel_page/js/swiper.min.js'%}"></script>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
 
