--- a/fatogo_RDB/templates/fatogo_RDB/index.html
+++ b/fatogo_RDB/templates/fatogo_RDB/index.html
@@ -42,7 +42,7 @@
   <div class="vertical">
     <ul>
       <li class="item" id="item01">
-        <a href="/2.hotel_page/hotel_1.html"><!-- 2.hotel_page 폴더의 hotel_1.html 파일로 이동함-->
+        <a href="hotel_page/hotel_1.html"><!-- 2.hotel_page 폴더의 hotel_1.html 파일로 이동함-->
           <p class="pic">
             <img src="{% static 'img/Hotel_1.png' %}{% static "img/Hotel_1.png" %}" altalt="김파투고의 김여행 김모텔 프론트사진">
             <!-- 이미지 파일 -->
@@ -81,7 +81,7 @@
         </a>
       </li>
       <li class="item" id="item02">
-        <a href="2.hotel_page/hotel_1.html"><!-- 2.hotel_page 폴더의 hotel_1.html 파일로 이동함-->
+        <a href="hotel_page/hotel_1.html"><!-- 2.hotel_page 폴더의 hotel_1.html 파일로 이동함-->
           <p class="pic">
             <img src="{% static 'img/Hotel_1.png' %}" altalt="김파투고의 김여행 김모텔 프론트사진"><!-- 이미지 파일 -->
           </p>
