--- a/fatogo_RDB/static/fatogo_RDB/css/main.css
+++ b/fatogo_RDB/static/fatogo_RDB/css/main.css
@@ -34,7 +34,7 @@ header h1 {
   width: 22.4vmin;
   height: 8vmin;
   margin: 0 0 0 -11.2vmin;
-  background-image: url("../img/FaToGO.png");
+  background-image: url("../../img/FaToGO.png");
   background-size: 22.4vmin 8vmin;
 }
 
