--- a/fatogo_RDB/templates/hotel_page/hotel_main.html
+++ b/fatogo_RDB/templates/hotel_page/hotel_main.html
@@ -35,11 +35,11 @@
 
   <header>
     <h1>
-      <a href="C:\Users\nucle\Desktop\Dev\1.main_page\index.html" title="Fatogo">Fatogo test1</a><!-- 1.main_page 폴더의 index.html 파일로 이동함-->
+      <a href="../" title="Fatogo">Fatogo test1</a><!-- 1.main_page 폴더의 index.html 파일로 이동함-->
     </h1>
   </header>
 
-  <form class="purchace" action="C:\Users\nucle\Desktop\Dev\3.bill_page\bill.html" method="post">
+  <form class="purchace" action="../bill_page/bill.html" method="post">{% csrf_token %}
 
     <div class="time_length">
       1박
@@ -283,17 +283,17 @@
   <!-- 스와이퍼 슬라이드쇼 확장 프로그램 CDN -->
   <script src="{% static 'hotel_page/js/swiper.min.js'%}"></script>
 
-  <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="{% static 'hotel_page/js/vendor/modernizr-3.6.0.min.js'%}"></script>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
   <script>
-    window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
+    window.jQuery || document.write('<script src="{% static 'hotel_page/js/vendor/jquery-3.3.1.min.js'%}"><\/script>')
   </script>
 
-  <script src="js/plugins.js"></script>
+  <script src="{% static 'hotel_page/js/plugins.js'%}"></script>
 
-  <script src="js/main.js"></script>
+  <script src="{% static 'hotel_page/js/main.js'%}"></script>
   <!-- 스와이퍼 슬라이드 쇼 스크립트 -->
   <script>
     var swiper1 = new Swiper('#swiper-container1', {
