--- a/static/hotel_page/css/hotel_amenity.css
+++ b/static/hotel_page/css/hotel_amenity.css
@@ -41,7 +41,7 @@ header h1 {
   width: 84px;
   height: 30px;
   margin: 0 0 0 -42px;
-  background-image: url("../img/FaToGO.png");
+  background-image: url("../../img/FaToGO.png");
   background-size: 84px 30px;
   background-repeat: no-repeat;
 }
